# FORCA-Manip

./: .gitignore  README.md
docs/: experiments.md
src/sanet_onionsorting/: .gitignore  CMakeLists.txt  README.md  package.xml
src/sanet_onionsorting/anaconda_env/: activate_env_vars.sh  deactivate_env_vars.sh  environment.yml
src/sanet_onionsorting/config/: params.yaml  test_params.yaml
src/sanet_onionsorting/launch/: test_launch.py  yolo_srv_launch.py
src/sanet_onionsorting/msg/: OBlobs.msg
src/sanet_onionsorting/networkconfig/: backend_config.py  frontend_config.py
src/sanet_onionsorting/scripts/: client.py  frcnn_client.py  frcnn_service.py  rgbd_imgpoint_to_tf.py  service.py  test.py  yolo_client.py  yolo_service.py  yolov7_deepsort_client.py  yolov7_deepsort_service.py  yolov8_client.py  yolov8_service.py
src/sanet_onionsorting/srv/: Frcnn.srv  YoloDeepsort.srv
src/sanet_onionsorting/udev_rules/: 99-oak.rules
src/ur_four/: CMakeLists.txt  package.xml  rough.urdf
src/ur_four/config/: four_ur_controllers.yaml  ur_controllers.yaml  view_four_robot.rviz
src/ur_four/launch/: baseline.launch.py  centralized_baseline.launch.py  forca.launch.py  onion_reader.launch.py  onion_spawn_and_csv.launch.py  onion_spawner.launch.py  remove_onions.launch.py  ur_gazebo.launch.py
src/ur_four/meshes/lab_conveyor/: conveyor_box_gazebo.scene
src/ur_four/onrobot_sg/models/onrobot_sg_b/: sg_b1.urdf  sg_b2.urdf  sg_b3.urdf  sg_b4.urdf
src/ur_four/scripts/: PickandPlace.py  backup_mt_psort_orca.cpp  baseline.cpp  centralized_baseline.cpp  dec_rrt_baseline.cpp  dual_orca.cpp  dual_ur_waypoint_speed_control.cpp  gazebo_publisher.py  mt_orca_test.cpp  multi_thread_psort_orca.cpp  orca.cpp  psort_orca.cpp  psort_orca.py  rvo2_psort.cpp  rvo2_test.cpp  spawn_onions.py  spawn_robot_gazebo_bridge.py  ur1_sort.cpp  ur2_sort.cpp  wait_for_joint_states.py  waypoint_speed_control.cpp  waypoint_speed_control.py
src/ur_four/urdf/: bad_onion.urdf  bad_real_onion.urdf  bin1.urdf  bin2.urdf  camera1.urdf  camera2.urdf  camera3.urdf  camera4.urdf  conveyor.urdf  dual_ur.urdf  dual_ur.urdf.xacro  good_onion.urdf  gripper_pose_down.urdf  gripper_pose_front.urdf  ur1.xacro  ur1_combined_gazebo.urdf.xacro  ur2.xacro  ur2_combined_gazebo.urdf.xacro  ur_final.urdf.xacro
src/ur_four/urdf/inc/: ur.ros2_control.xacro
src/ur_four/worlds/: bad_onion.sdf  camera.sdf  test.sdf  ur3e.world  ur3e_lab.world
src/ur_four_moveit_config/: CMakeLists.txt  package.xml
src/ur_four_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  ur1_initial_positions.yaml  ur2_initial_positions.yaml
src/ur_four_moveit_config/launch/: ur_moveit.launch.py
src/ur_four_moveit_config/srdf/: ur.srdf
